feat(request): integrate requests table with database
[Starts #167733656]
