# src/controllers/requestController.js
@@ -1,0 +1,34 @@
+import { RequestService } from '../services';
+import { Helpers } from '../utils';
+
+
+const { getRequests } = RequestService;
+const { successResponse, errorResponse } = Helpers;
+
+/**
+ * A collection of methods that controls user requests.
+ *
+ * @class RequestController
+ */
+export default class RequestController {
+  /**
+ *  assign a role to a user
+ * @static
+ * @param {Request} req - The request from the endpoint.
+ * @param {Response} res - The response returned by the method.
+ * @returns { JSON } - A JSON object containing success or failure details.
+ * @memberof RequestController
+ */
+  static async getUserRequests(req, res) {
+    try {
+      const { id } = req.data;
+      const requests = await getRequests(id);
+      if (!requests[0]) {
+        return errorResponse(res, { code: 404, message: 'You have made no request yet' });
+      }
+      return successResponse(res, requests, 200);
+    } catch (e) {
+      errorResponse(res, { code: 500, message: e.message });
+    }
+  }
+}
